fix: compatibility in scripts and documentation
Signed-off-by: Matheus André <matheusandr2@gmail.com>